feat: travar agenda e auto-status de shows
- Nova entidade BloqueioAgenda com dataInicio, dataFim e motivo
- BloqueioAgendaController: GET /bloqueios, POST /bloqueios, DELETE /bloqueios/{id}
- ShowService.criar(): auto-status PENDENTE (futuro) ou CONFIRMADO (passado)
- ShowService.criar(): bloqueia cadastro em datas travadas
- ShowService.listarTodos(): auto-confirma shows PENDENTE com data passada

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>